Table users {
  id SERIAL [pk, increment]
  created_at timestamp
  updated_at timestamp
  username varchar(30)
}

Table posts {
  id SERIAL [pk, increment]
  created_at timestamp
  updated_at timestamp
  url varchar(200)
  user_id integer [ref: > users.id]
  caption varchar(240)
  lat REAL
  lng REAL
}

Table comments {
  id SERIAL [pk, increment]
  created_at timestamp
  updated_at timestamp
  contents varchar(240)
  user_id INTEGER [ref: > users.id]
  post_id INTEGER [ref: > posts.id]

}

Table likes {
  id SERIAL [pk, increment]
  created_at timestamp
  user_id INTEGER [ref: > users.id]
  comment_id integer [ref: > comments.id]
  post_id integer [ref: > posts.id]
}

Table photo_tag {
  id SERIAL [pk, increment]
  created_at timestamp
  updated_at timestamp
  post_id integer [ref: > posts.id]
  user_id integer [ref: > users.id]
  x integer 
  y integer 
}

Table caption_tags {
  id SERIAL [pk, increment]
  created_at timestamp
  post_id integer [ref: > posts.id]
  user_id integer [ref: > users.id]
}

Table hastags {
  id serial [pk, increment]
  created_at timestamp
  title varchar(20)
}

Table hastags_posts {
  id serial [pk, increment]
  hashtag_id integer [ref: > hastags.id]
  post_id integer [ref: > posts.id]
}

Table follower {
  id serial [pk, increment]
  created_at timestamp
  leader_id integer [ref: > users.id]
  follower_id integer [ref: > users.id]
  
}
